--- a/css/styles.css
+++ b/css/styles.css
@@ -192,6 +192,11 @@ a.footer-logo {
   color: var(--accent-color);
   background-color: var(--additional-color);
 }
+.button.primary:hover:hover,
+.button.primary:focus:focus {
+  color: #ffffff;
+  background-color: #404bbf;
+}
 
 .button.secondary {
   background-color: #f4f4fd;
