--- a/css/styles.css
+++ b/css/styles.css
@@ -245,6 +245,10 @@ a.current {
 .footer-style {
   background-color: var(--title-text-color);
   color: var(--additional-color);
+  padding-top: 101.5px;
+  padding-bottom: 100px;
+  padding-left: auto;
+  padding-right: auto;
 }
 .footer-logo {
   color: var(--accent-color);
@@ -267,6 +271,7 @@ a.current {
   line-height: 1.5;
   letter-spacing: 0.02em;
   margin: 0;
+  margin-top: 17.5px;
   padding: 0;
 }
 /* buttoms style */
