--- a/css/styles.css
+++ b/css/styles.css
@@ -369,6 +369,9 @@ a.current {
   margin-bottom: 48px;
 }
 
+.portfolio-item:nth-last-child(-n + 3) {
+  margin-bottom: 0;
+}
 /* main containers and sections */
 
 .container {
