--- a/css/styles.css
+++ b/css/styles.css
@@ -182,6 +182,9 @@ a.current {
 .values .item + .item {
   margin-left: 24px;
 }
+.values .item {
+  width: calc((1158px - 72px) / 4);
+}
 
 /* what we are doing */
 
@@ -190,6 +193,10 @@ a.current {
   margin: 0;
   padding: 0;
 }
+.work-examples .item {
+  width: calc((1158px - 48px) / 3);
+}
+
 .work-examples .item + .item {
   margin-left: 24px;
 }
@@ -205,11 +212,12 @@ a.current {
   text-transform: capitalize;
   letter-spacing: 0.02em;
   margin-bottom: 72px;
+  margin-top: 0;
 }
 
 .team-card {
   background: var(--standart-color);
-  width: 264px;
+  width: calc((1158px - 72px) / 4);
 }
 .team-list {
   display: flex;
@@ -229,8 +237,7 @@ a.current {
   text-align: center;
   letter-spacing: 0.02em;
   padding: 0;
-  margin-top: 32px;
-  margin-bottom: 8px;
+  margin: 0;
 }
 
 .team-text {
@@ -239,12 +246,18 @@ a.current {
   text-align: center;
   letter-spacing: 0.02em;
   padding: 0;
-  margin-bottom: 32p;
-  margin-top: 0;
+  margin: 0;
 }
 
 .team-section {
   background-color: var(--additional-color);
+}
+
+.team-details {
+  border: 1px solid var(--border-color);
+  text-align: center;
+  padding-top: 32px;
+  padding-bottom: 32px;
 }
 
 /* footer */
@@ -360,25 +373,22 @@ a.current {
 }
 
 .portfolio-item {
+  width: calc((100% - 48px) / 3);
   margin-right: 24px;
   margin-bottom: 48px;
-  border-bottom: 1px solid var(--border-color);
 }
 .portfolio-item:nth-child(3n) {
   margin-right: 0;
-  margin-bottom: 48px;
 }
-
 .portfolio-item:nth-last-child(-n + 3) {
   margin-bottom: 0;
 }
-/* main containers and sections */
 
+/* main containers and sections */
 .container {
-  width: 1158px;
+  max-width: 1128px;
+  padding: 0 15px;
   margin: 0 auto;
-  padding-left: 10px;
-  padding-right: 10px;
 }
 
 .section.no-padding {
@@ -393,4 +403,6 @@ a.current {
 
 img {
   display: block;
+  max-width: 100%;
+  height: auto;
 }
