--- a/css/styles.css
+++ b/css/styles.css
@@ -351,7 +351,7 @@ a.current {
   line-height: 1.2;
   letter-spacing: 0.02em;
   padding: 0;
-  margin-top: 32px;
+  margin: 0;
   margin-bottom: 8px;
 }
 
@@ -361,8 +361,7 @@ a.current {
   line-height: 1.5;
   letter-spacing: 0.02em;
   padding: 0;
-  margin-bottom: 32p;
-  margin-top: 0;
+  margin: 0;
 }
 
 .portfolio-list {
@@ -384,6 +383,15 @@ a.current {
   margin-bottom: 0;
 }
 
+.portfolio-details {
+  border-left: 1px solid var(--border-color);
+  border-right: 1px solid var(--border-color);
+  border-bottom: 1px solid var(--border-color);
+  padding-top: 32px;
+  padding-bottom: 32px;
+  padding-left: 16px;
+  text-align: left;
+}
 /* main containers and sections */
 .container {
   max-width: 1128px;
