--- a/css/styles.css
+++ b/css/styles.css
@@ -119,7 +119,8 @@ a.current {
   font-size: 56px;
   line-height: 1.07;
   letter-spacing: 0.02em;
-  margin: 0;
+  max-width: 496px;
+  margin: 0 auto;
   padding: 0;
 }
 
